build_log_jdbc_verify.txt
> Task :clean

> Task :compileJava FAILED
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\memory\JdbcChatMemory.java:19: error: JdbcChatMemory is not abstract and does not override abstract method add(String,List<Message>) in ChatMemory
public class JdbcChatMemory implements ChatMemory {
       ^
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\memory\JdbcChatMemory.java:30: error: cannot find symbol
        jdbcTemplate.update(sql, conversationId, message.getMessageType().getValue(), message.getContent());
                                                                                             ^
  symbol:   method getContent()
  location: variable message of type Message
Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/bokducke/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\memory\JdbcChatMemory.java:19: error: JdbcChatMemory is not abstract and does not override abstract method add(String,List<Message>) in ChatMemory
  public class JdbcChatMemory implements ChatMemory {
         ^
  Note: C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\service\LlmService.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\memory\JdbcChatMemory.java:30: error: cannot find symbol
          jdbcTemplate.update(sql, conversationId, message.getMessageType().getValue(), message.getContent());
                                                                                               ^
    symbol:   method getContent()
    location: variable message of type Message
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
2 actionable tasks: 2 executed
